--- a/01_hm_tmpl.yaml
+++ b/01_hm_tmpl.yaml
@@ -1,4 +1,4 @@
-flow123d_version: 3.0.9
+flow123d_version: 3.1.0
 problem: !Coupling_Sequential
   description: Hydraulic stimulation of fractures connecting two open well ends
   mesh:
@@ -13,10 +13,11 @@ problem: !Coupling_Sequential
         biot_alpha: 0.17
         fluid_density: 1000
     time:
-      end_time: [365, 'd'] #86400 # 1 day
+      init_dt: [0.25, 'd']
+      end_time: [5, 'd'] #86400 # 1 day
     iteration_parameter: 1 # affects convergence of HM coupling (defaults to 1, lower value sometimes helps)
     a_tol: 0
-    r_tol: 1e-3
+    r_tol: 1e-8
     flow_equation: !Flow_Richards_LMH
         nonlinear_solver:
           linear_solver: !Petsc
@@ -27,7 +28,7 @@ problem: !Coupling_Sequential
           - region: BULK
             conductivity: <bulk_conductivity>
             storativity: 2.1e-8
-            init_piezo_head: 0    # piezometric head is shifted so that at the tunnel center the pressure height is zero
+            init_pressure: 300
 #          - region: fractures
 #            cross_section: <fr_cross_section>
 #            conductivity: <fr_conductivity>
@@ -40,7 +41,7 @@ problem: !Coupling_Sequential
 #            bc_piezo_head: 0
         output:
           times: &output_times
-            - step: [30, 'd'] #86400 # 1 day
+            - step: [1, 'd'] #86400 # 1 day
           fields:
             - piezo_head_p0
             - pressure_p0
@@ -77,12 +78,15 @@ problem: !Coupling_Sequential
 #            young_modulus: 50e0
 #            poisson_ratio: 0.25
 
-          - region: [ .top ]
+          - region: .top
             bc_type: traction
-            bc_traction: 11e6
-          - region: [ .right ]
+            bc_traction: [0, -11e6, 0]
+          - region: .right
             bc_type: traction
-            bc_traction: 45e6
-          - region: [ .bottom, .left ]
+            bc_traction: [-45e6, 0, 0]
+          - region: .left
             bc_type: displacement_n  # lateral sides can move in tangential direction
+            bc_displacement: 0
+          - region: .bottom
+            bc_type: displacement
             bc_displacement: 0
