--- a/01_hm_tmpl.yaml
+++ b/01_hm_tmpl.yaml
@@ -3,18 +3,18 @@ problem: !Coupling_Sequential
   description: Hydraulic stimulation of fractures connecting two open well ends
   mesh:
     mesh_file: <mesh>
-#    regions:
-#      - !Union
-#        name: fractures
-#        regions: <fracture_regions>
+    regions:
+      - !Union
+        name: .outer_boundary
+        regions: [.bottom, .top, .left, .right]
   flow_equation: !Coupling_Iterative
     input_fields:
       - region: BULK
         biot_alpha: 0.17
         fluid_density: 1000
     time:
-      init_dt: [0.25, 'd']
-      end_time: [5, 'd'] #86400 # 1 day
+      init_dt: [1, 'd']
+      end_time: [20, 'd'] #86400 # 1 day
     iteration_parameter: 1 # affects convergence of HM coupling (defaults to 1, lower value sometimes helps)
     a_tol: 0
     r_tol: 1e-8
@@ -35,10 +35,23 @@ problem: !Coupling_Sequential
 #            storativity: 2e-7
 #            init_piezo_head: 0
 
-          - region: .BOUNDARY
+          - region: .outer_boundary
             bc_type: dirichlet
             bc_pressure: 300 # 3MPa = p = h*rho*g => h = 300 m
-#            bc_piezo_head: 0
+          - region: .tunnel
+            bc_type: dirichlet
+            bc_pressure: !FieldTimeFunction
+              time_function:
+                values: !include_csv
+                  file: bc_pressure_tunnel.csv
+                  separator: " "
+                  n_head_lines: 1
+                  format:
+                    t:
+                      time: $0
+                      unit: 'd'
+                    value: $1
+
         output:
           times: &output_times
             - step: [1, 'd'] #86400 # 1 day
@@ -90,3 +103,6 @@ problem: !Coupling_Sequential
           - region: .bottom
             bc_type: displacement
             bc_displacement: 0
+          - region: .tunnel
+            bc_type: traction
+            bc_displacement: [0, 0, 0]
