--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,12 @@
+# keeps computed results in dirs
+debug: True
+
 # true -> work with pbs on metacentrum
 # false -> run locally, no pbs
 run_on_metacentrum: False
 
 # number of samples
-n_samples: 2
+n_samples: 1
 task_size: 0.001
 collect_only: False
 mesh_only: False
